# QTarmor

./: CMakeLists.txt  autodetection.cpp  autodetection.h  main.cpp  mainwindow.cpp  ui_mainwindow.h
