cmake_minimum_required(VERSION 3.6)
SET(CMAKE_BUILE_RELEASE)
set(PROJECT_NAME try)
project(${PROJECT_NAME})
set(CMAKE_INCLUDE_CURRENT_DIR  ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
find_package(Qt5Core REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5PrintSupport REQUIRED)
find_package(OpenCV 4.0.0 REQUIRED)
add_compile_options(-std=c++11)
include_directories(${OpenCV_INCLUDE_DIRS})
set(SOURCE_FILES  main.cpp mainwindow.cpp mainwindow.h mainwindow.ui qcustomplot.cpp qcustomplot.h
        armor/autodetection.cpp armor/autodetection.h)
add_executable(${PROJECT_NAME} ${SOURCE_FILES} )
target_link_libraries(${PROJECT_NAME} Qt5::Widgets)
target_link_libraries(${PROJECT_NAME} Qt5::Gui)
target_link_libraries(${PROJECT_NAME} Qt5::Core)
target_link_libraries(${PROJECT_NAME} Qt5::PrintSupport)
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})

